// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotificationsSettings/> <TestNotification/> Displaying test notification importance warning (severity: 1) 1`] = `
<div
  id="test-notification"
>
  <h2>
    Test notification
  </h2>
  <div
    class="alert  alert-warning"
  >
    You will not receive the test notification to your email inbox with current importance level. Please raise the importance level at least to "Reboot or attention is required" and click "Save" button if you want to get this notification by email.
  </div>
  <div
    class="col-sm-12 col-lg-12 p-0 mb-3 text-right mb-3"
  >
    <button
      class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
      type="button"
    >
      Send test notification
    </button>
  </div>
</div>
`;

exports[`<NotificationsSettings/> <TestNotification/> No test notification importance warning (severity: 2) 1`] = `
<div
  id="test-notification"
>
  <h2>
    Test notification
  </h2>
  <div
    class="col-sm-12 col-lg-12 p-0 mb-3 text-right mb-3"
  >
    <button
      class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
      type="button"
    >
      Send test notification
    </button>
  </div>
</div>
`;

exports[`<NotificationsSettings/> <TestNotification/> No test notification importance warning (severity: 3) 1`] = `
<div
  id="test-notification"
>
  <h2>
    Test notification
  </h2>
  <div
    class="col-sm-12 col-lg-12 p-0 mb-3 text-right mb-3"
  >
    <button
      class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
      type="button"
    >
      Send test notification
    </button>
  </div>
</div>
`;

exports[`<NotificationsSettings/> <TestNotification/> Should toggle unsaved changes warning modal 1`] = `
<div
  id="test-notification"
>
  <h2>
    Test notification
  </h2>
  <div
    class="alert  alert-warning"
  >
    You will not receive the test notification to your email inbox with current importance level. Please raise the importance level at least to "Reboot or attention is required" and click "Save" button if you want to get this notification by email.
  </div>
  <div
    class="col-sm-12 col-lg-12 p-0 mb-3 text-right mb-3"
  >
    <button
      class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
      type="button"
    >
      Send test notification
    </button>
  </div>
</div>
`;

exports[`<NotificationsSettings/> Disabled 1`] = `
<div>
  <h1>
    Notifications
  </h1>
  <p>
    Your device can send you e-mail notifications about required reboots, important events, installed updates and new features according to your settings. When done with configuration, you can test it by pressing Send test notification.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-3"
  >
    <form>
      <h2>
        Email Notifications
      </h2>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch custom-control-inline"
        >
          <input
            checked=""
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable email notifications
          </label>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    id="test-notification"
  />
  <div
    id="modal-container"
  />
</div>
`;

exports[`<NotificationsSettings/> Enabled, smtp_type:custom 1`] = `
<div>
  <h1>
    Notifications
  </h1>
  <p>
    Your device can send you e-mail notifications about required reboots, important events, installed updates and new features according to your settings. When done with configuration, you can test it by pressing Send test notification.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-3"
  >
    <form>
      <h2>
        Email Notifications
      </h2>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch custom-control-inline"
        >
          <input
            checked=""
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable email notifications
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="d-block"
          for="2"
        >
          SMTP provider
        </label>
        <div
          class="custom-control custom-radio custom-control-inline"
        >
          <input
            class="custom-control-input"
            id="smtp_provider-0"
            name="smtp_provider"
            type="radio"
            value="turris"
          />
          <label
            class="custom-control-label"
            for="smtp_provider-0"
          >
            Turris
          </label>
        </div>
        <div
          class="custom-control custom-radio custom-control-inline"
        >
          <input
            checked=""
            class="custom-control-input"
            id="smtp_provider-1"
            name="smtp_provider"
            type="radio"
            value="custom"
          />
          <label
            class="custom-control-label"
            for="smtp_provider-1"
          >
            Custom
          </label>
        </div>
        <small
          class="form-text text-muted"
        >
          If you set SMTP provider to "Turris", the servers provided to members of the Turris project would be used. These servers do not require any additional settings. If you want to set your own SMTP server, please select "Custom" and enter required settings.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          Recipient's email
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="some@example.com"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Email address of recipient. Separate multiple addresses by comma.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="4"
        >
          Importance
        </label>
        <select
          class="custom-select"
          id="4"
        >
          <option
            value="1"
          >
            Reboot is required
          </option>
          <option
            value="2"
          >
            Reboot or attention is required
          </option>
          <option
            value="3"
          >
            Reboot or attention is required or update was installed
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            checked=""
            class="custom-control-input"
            id="5"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="5"
          >
            Send news
            <small
              class="form-text text-muted"
            >
              Send emails about new features.
            </small>
          </label>
        </div>
      </div>
      <h3>
        SMTP Settings
      </h3>
      <div
        class="form-group"
      >
        <label
          for="6"
        >
          Sender address (From)
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="6"
            placeholder="router@example.com"
            required=""
            type="email"
            value="router@example.com"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          This is the address notifications are send from.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="7"
        >
          Server address
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="7"
            placeholder="example.com"
            required=""
            type="text"
            value="example.com"
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="8"
        >
          Server port
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="8"
            max="65535"
            min="1"
            type="number"
            value="465"
          />
          <div
            class="input-group-append"
          >
            <button
              aria-label="Increase"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-plus"
              />
            </button>
            <button
              aria-label="Decrease"
              class="btn btn-outline-secondary"
              type="button"
            >
              <i
                class="fas fa-minus"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="9"
        >
          Security
        </label>
        <select
          class="custom-select"
          id="9"
        >
          <option
            value="none"
          >
            None
          </option>
          <option
            value="ssl"
          >
            SSL
          </option>
          <option
            value="starttls"
          >
            STARTTLS
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <label
          for="10"
        >
          Username
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="10"
            type="text"
            value="root"
          />
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="11"
        >
          Password
        </label>
        <div
          class="input-group"
        >
          <input
            autocomplete="new-password"
            class="form-control"
            id="11"
            type="password"
            value="test_password"
          />
          <div
            class="input-group-append"
          >
            <button
              class="input-group-text"
              type="button"
            >
              <i
                class="fa fa-eye"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    id="test-notification"
  >
    <h2>
      Test notification
    </h2>
    <div
      class="alert  alert-warning"
    >
      You will not receive the test notification to your email inbox with current importance level. Please raise the importance level at least to "Reboot or attention is required" and click "Save" button if you want to get this notification by email.
    </div>
    <div
      class="col-sm-12 col-lg-12 p-0 mb-3 text-right mb-3"
    >
      <button
        class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
        type="button"
      >
        Send test notification
      </button>
    </div>
  </div>
  <div
    id="modal-container"
  >
    <div
      class="modal fade"
      role="dialog"
    >
      <div
        class="modal-dialog  modal-dialog-centered"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              Warning!
            </h5>
            <button
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
          <div
            class="modal-body"
          >
            <p>
              There are some unsaved changes in the notifications settings. Do you want to discard them and test the notifications with the old settings?
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-primary "
              type="button"
            >
              Cancel
            </button>
            <button
              class="btn btn-danger"
              type="button"
            >
              Confirm
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NotificationsSettings/> Enabled,smtp_type:turris 1`] = `
<div>
  <h1>
    Notifications
  </h1>
  <p>
    Your device can send you e-mail notifications about required reboots, important events, installed updates and new features according to your settings. When done with configuration, you can test it by pressing Send test notification.
  </p>
  <div
    class="card p-4 col-sm-12 col-lg-12 p-0 mb-3"
  >
    <form>
      <h2>
        Email Notifications
      </h2>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-switch custom-control-inline"
        >
          <input
            checked=""
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Enable email notifications
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          class="d-block"
          for="2"
        >
          SMTP provider
        </label>
        <div
          class="custom-control custom-radio custom-control-inline"
        >
          <input
            class="custom-control-input"
            id="smtp_provider-0"
            name="smtp_provider"
            type="radio"
            value="turris"
          />
          <label
            class="custom-control-label"
            for="smtp_provider-0"
          >
            Turris
          </label>
        </div>
        <div
          class="custom-control custom-radio custom-control-inline"
        >
          <input
            checked=""
            class="custom-control-input"
            id="smtp_provider-1"
            name="smtp_provider"
            type="radio"
            value="custom"
          />
          <label
            class="custom-control-label"
            for="smtp_provider-1"
          >
            Custom
          </label>
        </div>
        <small
          class="form-text text-muted"
        >
          If you set SMTP provider to "Turris", the servers provided to members of the Turris project would be used. These servers do not require any additional settings. If you want to set your own SMTP server, please select "Custom" and enter required settings.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="3"
        >
          Recipient's email
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="3"
            required=""
            type="text"
            value="some@example.com"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Email address of recipient. Separate multiple addresses by comma.
        </small>
      </div>
      <div
        class="form-group"
      >
        <label
          for="4"
        >
          Importance
        </label>
        <select
          class="custom-select"
          id="4"
        >
          <option
            value="1"
          >
            Reboot is required
          </option>
          <option
            value="2"
          >
            Reboot or attention is required
          </option>
          <option
            value="3"
          >
            Reboot or attention is required or update was installed
          </option>
        </select>
      </div>
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            checked=""
            class="custom-control-input"
            id="5"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="5"
          >
            Send news
            <small
              class="form-text text-muted"
            >
              Send emails about new features.
            </small>
          </label>
        </div>
      </div>
      <div
        class="form-group"
      >
        <label
          for="17"
        >
          Sender's name
        </label>
        <div
          class="input-group"
        >
          <input
            class="form-control"
            id="17"
            type="text"
            value="turris"
          />
        </div>
        <small
          class="form-text text-muted"
        >
          Name of the sender - will be used as a part of the sender's email address before the "at" sign.
        </small>
      </div>
      <div
        class="text-right"
      >
        <button
          class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>
  <div
    id="test-notification"
  >
    <h2>
      Test notification
    </h2>
    <div
      class="alert  alert-warning"
    >
      You will not receive the test notification to your email inbox with current importance level. Please raise the importance level at least to "Reboot or attention is required" and click "Save" button if you want to get this notification by email.
    </div>
    <div
      class="col-sm-12 col-lg-12 p-0 mb-3 text-right mb-3"
    >
      <button
        class="btn btn-primary  col-sm-12 col-md-3 col-lg-2"
        type="button"
      >
        Send test notification
      </button>
    </div>
  </div>
  <div
    id="modal-container"
  >
    <div
      class="modal fade"
      role="dialog"
    >
      <div
        class="modal-dialog  modal-dialog-centered"
        role="document"
      >
        <div
          class="modal-content"
        >
          <div
            class="modal-header"
          >
            <h5
              class="modal-title"
            >
              Warning!
            </h5>
            <button
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
          </div>
          <div
            class="modal-body"
          >
            <p>
              There are some unsaved changes in the notifications settings. Do you want to discard them and test the notifications with the old settings?
            </p>
          </div>
          <div
            class="modal-footer"
          >
            <button
              class="btn btn-primary "
              type="button"
            >
              Cancel
            </button>
            <button
              class="btn btn-danger"
              type="button"
            >
              Confirm
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
